# PlainLogic

./: Bootcamp.txt  START_HERE.md
resilienceos/: .env.example  .gitignore  Dockerfile  README.md  inference.py  pyproject.toml  pytest.ini
resilienceos/docs/: contracts.md  final_gate_check.md  paper_to_code_mapping.md  submission_manifest.md  submission_notes.md
resilienceos/outputs/: docker_build_log.txt  docker_run_log.txt  eval_matrix_report.json  local_validate_log.txt  red_team_report.json  round1_inference_report_heuristic_seed11.json  round1_inference_report_heuristic_seed12.json  round1_inference_report_heuristic_seed19.json  round1_inference_report_heuristic_seed7.json
resilienceos/outputs/submission_bundle/: all_outputs_dump.txt  baseline_report.json  deterministic_replay_report.txt  eval_matrix_report.json  gemini_sanity_checks.md  openenv.yaml  round1_inference_report.json  round1_inference_report_heuristic.json  submission_manifest.md
resilienceos/outputs/submission_bundle/docs/: index.md
resilienceos/outputs/submission_bundle/scripts/: baseline_inference.py  eval_matrix.py  (+1 more)
resilienceos/scripts/: baseline_inference.py  benchmark_speed.py  build_submission_bundle.sh  determinism_check.py  eval_matrix.py  inference_round1.py  red_team_eval.py  run_local.sh  run_round1_inference.sh  validate.sh
resilienceos/server/: app.py
resilienceos/src/resilienceos/: baseline.py  environment.py  fixtures.py  grading.py  models.py  red_team.py  server.py
resilienceos/tests/: test_api_server.py  test_determinism.py  test_red_team_eval.py  test_score_bounds.py
(+15 files in other folders)
