[project]
name = "resilienceos"
version = "0.1.0"
description = "Deterministic city emergency operations environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "pydantic>=2.6.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "openai>=1.35.0",
]

[project.scripts]
server = "resilienceos.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
